--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 .header{
     width: 100%;
-    height: 70px;
+    max-height: 70px;
     background-color: rgb(246, 236, 236);
     position: fixed;
     z-index: 10;
@@ -12,14 +12,14 @@ body{
     left: 0;
     overflow: auto;
 }
-.em-div{
-    width: 50px;
-    height: 3px;
-    background-color: rgb(248, 175, 187);
-    visibility: hidden;
+.header-ul li{
+    list-style: none;
+    display: inline-block;
+    margin-left: 40px;
 }
-.header-ul li:hover  .em-div{
-    visibility: visible;
+.header-ul li:hover{
+    border-bottom: 2px  solid  black;
+    border-radius: 3px
 }
 .logo{
     width: 70px;
@@ -31,11 +31,6 @@ body{
 .header-ul li a{
     text-decoration: none;
     color: black;
-}
-.header-ul li{
-    list-style: none;
-    display: inline-block;
-    margin-left: 20px;
 }
 .header-ul{
     float: right;
@@ -85,9 +80,9 @@ body{
     padding: 15px;
 }
  /* ------------------------------------------------------------------------------------------------------------- */
- .section2{
+.section2{
     height: 100vh;
- }
+}
 .sec2-h2{
     text-align: center;
     margin-top: 130px;
@@ -95,7 +90,7 @@ body{
     letter-spacing: 1px;
 }
 .empty-div{
-    width: 70px;
+    width: 100px;
     height: 5px;
     background-color: rgb(253, 146, 164);
     margin: auto;
@@ -265,9 +260,6 @@ body{
     line-height: 25px;
     float: left;
 }
-/* .sec4-p   p{
-    color: rgb(165, 135, 135);
-} */
 .sec4-divs::after{
     position: absolute;
     content: "";
